style.css
header, main, footer {
  font-family:  Helvetica, Arial, sans-serif;
  font-size: 14pt;
}
header {
  background-color: black;
  padding: 20px 50px;
}
nav { /* positioning of nav bar */
  position: absolute;
  right: 0px;
  top: 45px;
}
nav a {
  padding: 20px;
}
nav a, article div a { /* stylizes nav and contact links */  
  text-decoration: none;
  text-transform: uppercase;
}
h1, h2 {
  text-transform: uppercase;
  letter-spacing: 3px;
  color: white;
  margin: auto;
}
h3 {
  font-size: 16pt;
}
img { /* position and scale fix for photo */
  margin: auto;
  width: 450px;
  height:450px;
  transform: scaleX(1.35)
}
main article div { /* structures the containers of main page content */
  box-sizing: border-box;
  margin: auto;
  max-width: 450px;
  padding: 20px;
}
main {
  padding: 50px 0px;
  background-color: white;
  line-height: 1.8; /* for better readability */
  font-weight: bold;
}
.centered-text, h3 {
  text-align: center;
}
footer {
  text-align: center;
  color: white;
  background-color: grey;
  padding: 20px;
}
hr {
  max-width: 200px;
  margin: auto;
}
ol {
  list-style-position: inside;
  text-align: left;
  margin: auto;
}

nav a:link    { color: white           }
a:visited     { color: orangered          }
a:hover       { color: blue  }
a:active      { color: cyan            }
main a:link   { color: black           }

